# Iliad

./: .snakemake-workflow-catalog.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yaml
config/: README.md  UserSampleTable.csv  UserSampleTable.xlsx  auto_config.py  config-commented.yaml  config.yaml  cramSampleTable.csv  cramSampleTable.xlsx  cramSamples.tsv  mergeTheseVCFs.txt  renameChrFile37.txt  renameChrFile38.txt  samples.tsv
data/liftover/: README.MD
data/target_ref_merge/: README.md
data/vcf_Lift-and-Merge/: README.MD  build-VCF-basenames.sh
docs/: .readthedocs.yaml  Makefile  conf.py  index.rst  setup.py
docs/getting_started/: GCP.rst  academic.rst  config.rst  demo.rst  docker.rst  installation.rst  platform_preparation.rst
docs/projectinfo/: changelog.rst  citing.rst  comingsoon.rst  container_images.rst  contributing.rst  credits.rst  faq.rst  license.rst
docs/singularity-definitions/: IGDP-def-v1.0.0  IGDP-def-v1.1.0  IGDP-def-v1.2.0
docs/tutorial/: lift_and_merge.rst  merge_ref_target.rst  merger.rst  raw_sequence.rst  snp_array.rst
env/: GenTrain_ClusterSep_QC.yaml  bcftools1-14.yaml  determine-vcf-version.yaml  gtc2vcf-plugin.yaml  multiQC.yaml  replace-lociNames-with-rsIDs.yaml  sratoolkit.yaml
resources/: README.md
slurm_jobs/: Submodule-Lift-and-Merge-snakemake.sh  Submodule-Merge-and-Lift-snakemake.sh  cram-snakemake.sh  snakemake.sh  snpArray-snakemake.sh
workflow/: Lift-and-Merge_Snakefile  Snakefile  cram_Snakefile  liftoverTo37_Snakefile  liftoverTo38_Snakefile  snpArray_Snakefile  targetRefMerge_Snakefile
workflow/rules/: ._common.smk  ._fq.smk  arrayVCF.smk  common.smk  concatRawReads.smk  cram.smk  cram_variantCalling-Discovery.smk  cram_variantCalling.smk  dbsnpAnnotation.smk  dbsnps.smk  dbsnpsSeq.smk  fastQC.smk  finalMerger.smk  fq.smk  gtc2vcf.smk  idat2gtc.smk  lift_and_merge-0_dbsnps.smk  lift_and_merge-0_referenceGenomes.smk  lift_and_merge-1_prepare_37_to_38_VCFs.smk  lift_and_merge-1_prepare_38_to_37_VCFs.smk  lift_and_merge-2A_37_to_38_VCF-IDs.smk  lift_and_merge-2A_38_to_37_VCF-IDs.smk  lift_and_merge-2B_37_to_38_VCF-if38VCF-IDs.smk  lift_and_merge-2B_38_to_37_VCF-if37VCF-IDs.smk  lift_and_merge-3A_37_to_38_cleanIDs-Fixref.smk  lift_and_merge-3A_38_to_37_cleanIDs-Fixref.smk  lift_and_merge-3B_37_to_38_VCF-if38VCF-cleanIDs-Fixref.smk  lift_and_merge-3B_38_to_37_VCF-if37VCF-cleanIDs-Fixref.smk  lift_and_merge-3C_37_to_38_dbSNP-IDs.smk  lift_and_merge-3C_38_to_37_dbSNP-IDs.smk  lift_and_merge-4A_37_to_38-Lift-to-38.smk  lift_and_merge-4A_38_to_37-Lift-to-37.smk  liftover.smk  (+14 more)
(+152 files in other folders)
