[metadata]
name = Iliad
author = Noah Herrick
author_email = noahherrick1@gmail.com
project_urls =
    Documentation = https://iliad.readthedocs.io
    Source = https://github.com/snakemake/snakemake
description = Snakemake workflow for Genomic data processing
long_description =
    Iliad is a multi-functional genomic data processing pipeline
    implemented via the Snakemake workflow management system, Singularity or Docker container, 
    and a handful of Conda environments.
    Instances of any Singularity or Docker containers and Conda environments are automatically
    pulled down and created to build the right execution environment during workflow runtime,
    making light of the numerous required bioinformatics third-party software tools and dependencies.
    The multi-functional feature is supported by a modularized Snakemake workflow design and includes
    independent Snakemake workflows to accommodate many forms of genomic data and translate them to
    comprehensible genotypes in a variant call format file.
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.7
install_requires =
    appdirs
    configargparse
    connection_pool >=0.0.3
    datrie
    docutils
    gitpython
    humanfriendly
    jinja2 >=3.0,<4.0
    jsonschema
    nbformat
    psutil
    pulp >=2.0
    pyyaml
    requests
    reretry
    smart_open >=3.0
    stopit
    tabulate
    throttler
    toposort
    wrapt
    yte >=1.0,<2.0

[options.extras_require]
google-cloud =
    google-api-python-client
    google-cloud-storage
    google-crc32c
    oauth2client
messaging = slacker
pep =
    eido
    peppy
reports = pygments

[options.entry_points]
console_scripts =
    snakemake = snakemake:main
    snakemake-bash-completion = snakemake:bash_completion

[options.packages.find]
include = snakemake, snakemake.*

[options.package_data]
* = *.css, *.sh, *.html, *.jinja2, *.js, *.svg